force-app/main/default/objects/OEM_Measure_Config__mdt/OEM_Measure_Config__mdt.object-meta.xml
<CustomObject>
    <label>Measure Config</label>
    <pluralLabel>Measure Configs</pluralLabel>
</CustomObject>