force-app/main/default/objects/OEM_Measure_Config__mdt/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Text</type>
    <length>40</length>
</CustomField>