force-app/main/default/objects/OEM_Measure_Config__mdt/fields/GreenMax__c.field-meta.xml
<CustomField>
    <fullName>GreenMax__c</fullName>
    <label>Green Max</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>