force-app/main/default/objects/OEM_Measure_Config__mdt/fields/MeasureKey__c.field-meta.xml
<CustomField>
    <fullName>MeasureKey__c</fullName>
    <label>Measure Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>