force-app/main/default/objects/OEM_Measure_Config__mdt/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Text</type>
    <length>20</length>
</CustomField>