force-app/main/default/objects/OEM_Measure_Config__mdt/fields/YellowMax__c.field-meta.xml
<CustomField>
    <fullName>YellowMax__c</fullName>
    <label>Yellow Max</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>